# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  24 Oct 2006; Federico Fissore <federico@fsfe.org>
  +sun-jdk-1.6.0.0_beta103.ebuild:
  New snapshot bump.

  12 Oct 2006; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.0_beta101.ebuild, +sun-jdk-1.6.0.0_beta102.ebuild:
  New snapshot bump.

  06 Oct 2006; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.0_beta100.ebuild, +sun-jdk-1.6.0.0_beta101.ebuild:
  New snapshot.

  17 Sep 2006; Vlastimil Babka <caster@gentoo.org>
  -sun-jdk-1.6.0.0_beta98.ebuild, +sun-jdk-1.6.0.0_beta99.ebuild:
  New 1.6 snapshot, this time bi-weekly.

  03 Sep 2006; Vlastimil Babka <caster@matfyz.cz>
  -sun-jdk-1.6.0.0_beta97.ebuild, +sun-jdk-1.6.0.0_beta98.ebuild:
  Bump for new weekly release.
