@@ -6,43 +6,25 @@ AUX sun-jdk-1.7.env 925 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e SHA1 e2e
 MD5 095bd3019f41594de107fab06efe56aa files/sun-jdk-1.7.env 925
 RMD160 f20078640a13176763381811e2050d0b9cd0ca1e files/sun-jdk-1.7.env 925
 SHA256 95689b9bc21a9d571f556da0c6377c326bd2d24bc71f0b32f9bdc836c90cf581 files/sun-jdk-1.7.env 925
-DIST jdk-6-rc-bin-b102-linux-amd64-11_oct_2006.bin 56820912 RMD160 844775a83441dc2e210007120106fd97b92a4f2b SHA1 74edf427d4581ded66c277fc8e8c92275c01e539 SHA256 97aa393e1886f9c0e23a42ab72ae6760693d9e1b94592d69f37665dd21f04a21
-DIST jdk-6-rc-bin-b102-linux-i586-11_oct_2006.bin 63183059 RMD160 f0f9e3301046d7adc2e49871a76fdb45845f0429 SHA1 d98ce28be8495f1ae6aeb21063c817cfb08050c5 SHA256 c8b5dd0ca5216f5ff0f88587f89fd543b910c228166ed16e0586b19a0bc0a036
-DIST jdk-6-rc-bin-b103-linux-amd64-19_oct_2006.bin 56816086 RMD160 504f01714733bf8230d94663c86a623adb06ffdb SHA1 f59c2e23f62c155f89f0f2fd6f78612475e47430 SHA256 00b90c002a5d85ce333d8958b3fdeff43d73f16e61813adb6377242c7d86eea4
-DIST jdk-6-rc-bin-b103-linux-i586-19_oct_2006.bin 63180253 RMD160 fcf21666b4edaff19b76609dcfb4cb7152f1c2da SHA1 ff4ef18b19bb5c2739afd3943bc0640cd37feb8c SHA256 e399c88a446af05eb0193be7463c9da6845583984b770eb306a847e8932c7292
 DIST jdk-6-rc-bin-b104-linux-amd64-01_nov_2006.bin 56218016 RMD160 cc3edc27a78a3ee08cb55e7ffc20ff4207e05308 SHA1 e568d226226ee50a265dca587a3240cc3fc5874f SHA256 d8c5b401b1326e5b1fe0de66bcf3f0f7d24dbb360afb0d9c64406181ea82947c
 DIST jdk-6-rc-bin-b104-linux-i586-01_nov_2006.bin 62581289 RMD160 273d29fdbe02c1c0ad86418d91247f16edccec2d SHA1 91d1c8c8c58be83d57374e32aa24747ae7fe6eb8 SHA256 35e4ac081557ad7a790a5275beea1fb7a446e9d67053bdb68f4d9e0a2c0a962b
-DIST jdk-7-ea-bin-b01-linux-amd64-21_jul_2006.bin 54658299 RMD160 ed4b340985612111352efaf85a61de7575c9ed15 SHA1 8d562939ea044c1ef6bc482a57c4880590118927 SHA256 7d48514a4c5089d1c6d24e7b79d29c021444b3939de9aa3956f04eac07060edb
-DIST jdk-7-ea-bin-b01-linux-i586-21_jul_2006.bin 60975958 RMD160 5f9c864d6551a222660b1bdc0f95ff3801abea0d SHA1 00e11d0f8b0498a975ed6423ded0590c8fa2d8e9 SHA256 66a83524e77f8a518065056fd577c08fa34d7b95713ed606249821ac836ec85f
-EBUILD sun-jdk-1.6.0.0_beta102.ebuild 5366 RMD160 8f6acc932e4b86c444b39e1d3c71359162d17d5c SHA1 4bbb283134cb4cbfcb8d04024eac9164e280205e SHA256 218518559807a6da0b58d4220ff32f68e1c3e3dd18b554303a09c321870238d5
-MD5 c3788c2dfa2a6535908a14891f68177a sun-jdk-1.6.0.0_beta102.ebuild 5366
-RMD160 8f6acc932e4b86c444b39e1d3c71359162d17d5c sun-jdk-1.6.0.0_beta102.ebuild 5366
-SHA256 218518559807a6da0b58d4220ff32f68e1c3e3dd18b554303a09c321870238d5 sun-jdk-1.6.0.0_beta102.ebuild 5366
-EBUILD sun-jdk-1.6.0.0_beta103.ebuild 5366 RMD160 14b1f0fc5b7c5e3f05b900c916bd1a120876c970 SHA1 2764102fa3d392753e2c21cac22d859ffd82e8e8 SHA256 2cb5eb96b76c18fafe7cd7f473fee55df76ff4d4b0ffa9bcbc772350813d4c6f
-MD5 9471347fe26d35520d68b9a700cf6f41 sun-jdk-1.6.0.0_beta103.ebuild 5366
-RMD160 14b1f0fc5b7c5e3f05b900c916bd1a120876c970 sun-jdk-1.6.0.0_beta103.ebuild 5366
-SHA256 2cb5eb96b76c18fafe7cd7f473fee55df76ff4d4b0ffa9bcbc772350813d4c6f sun-jdk-1.6.0.0_beta103.ebuild 5366
+DIST jdk-7-ea-bin-b02-linux-amd64-08_nov_2006.bin 56216291 RMD160 d4b527c617469f7e3d731a8da742769a82a9bbdc SHA1 96eec99073f6351f671b2ac2c53a59e84d792af6 SHA256 8debcf78ffbf5acbc46cec213798a21adc9927e9c978816eb985949524a0e735
+DIST jdk-7-ea-bin-b02-linux-i586-08_nov_2006.bin 62577382 RMD160 b067db8c29e4d1dca4eeedca7e0bc6839e078cce SHA1 321b99265f5c3852a0071495fad6262d98029c81 SHA256 50205b0fa9a1b7c10e225575472b28ba851024334c3887230287152c67700718
 EBUILD sun-jdk-1.6.0.0_rc104.ebuild 4689 RMD160 863aa094ccfbf76a85da1714075e0938dff423a3 SHA1 d57bee7e55ea28c1f363d3551bcb9643d1575f63 SHA256 545ee9526062aeccf319770ef844bdf5a8000133fda4d6ec4aef8ed6447a3469
 MD5 fe2d728981c53204701804fc25de34f2 sun-jdk-1.6.0.0_rc104.ebuild 4689
 RMD160 863aa094ccfbf76a85da1714075e0938dff423a3 sun-jdk-1.6.0.0_rc104.ebuild 4689
 SHA256 545ee9526062aeccf319770ef844bdf5a8000133fda4d6ec4aef8ed6447a3469 sun-jdk-1.6.0.0_rc104.ebuild 4689
-EBUILD sun-jdk-1.7.0.0_alpha01.ebuild 5366 RMD160 f084f7f55f6ffa909ee6d484168f16510e4bb92f SHA1 6fa6690e3c3f3e5600a116a9e876be3ed6e786ef SHA256 6c16f76e979e3cc18f1e41f4f18210f295c764b2e602218c1b34e50c5c6b415d
-MD5 58031070ba5c0252659b0131fa0d1dfa sun-jdk-1.7.0.0_alpha01.ebuild 5366
-RMD160 f084f7f55f6ffa909ee6d484168f16510e4bb92f sun-jdk-1.7.0.0_alpha01.ebuild 5366
-SHA256 6c16f76e979e3cc18f1e41f4f18210f295c764b2e602218c1b34e50c5c6b415d sun-jdk-1.7.0.0_alpha01.ebuild 5366
-MISC ChangeLog 810 RMD160 9d0651c5733b0196d34df5aaeb2166c3f3d8a093 SHA1 6e384fd9da3b377a8a734135698f1a8b5dd2dd4f SHA256 05f78268b948840c4a4d2a00eefef4065b7a7ea6393b76de754cdebf385f6f8e
-MD5 feccdf5626c0bf7e14cca6b4b22edfe7 ChangeLog 810
-RMD160 9d0651c5733b0196d34df5aaeb2166c3f3d8a093 ChangeLog 810
-SHA256 05f78268b948840c4a4d2a00eefef4065b7a7ea6393b76de754cdebf385f6f8e ChangeLog 810
-MD5 bcda8295c8fdfc12bbb75a50bc959318 files/digest-sun-jdk-1.6.0.0_beta102 641
-RMD160 345288e67c7448b09508eb4e13e9ac36f11a8e13 files/digest-sun-jdk-1.6.0.0_beta102 641
-SHA256 f9038955733a329a357fc1e15dc0be3a8fbbe6411d37b031a210a51299750786 files/digest-sun-jdk-1.6.0.0_beta102 641
-MD5 a52d7805574ebe69140584e33b63b57d files/digest-sun-jdk-1.6.0.0_beta103 641
-RMD160 9ceb7140472e284cb8a7f1d83638653ac7152cd5 files/digest-sun-jdk-1.6.0.0_beta103 641
-SHA256 47c82d1707b429e43038e6b28da06a842c09f4c775c8ebe2184c066e047dd9e6 files/digest-sun-jdk-1.6.0.0_beta103 641
+EBUILD sun-jdk-1.7.0.0_alpha02.ebuild 5367 RMD160 56a28e81e125f2bf54330647269fa1341d26e5fe SHA1 2546c1c5c615f54089660cfdc83190a89f03651c SHA256 55d77e4ecb9f03562e7edfd07fcea47098f2f94a8ba184ab2ba840fed28949af
+MD5 1af7fe0df7963228bc411f40bf70d25b sun-jdk-1.7.0.0_alpha02.ebuild 5367
+RMD160 56a28e81e125f2bf54330647269fa1341d26e5fe sun-jdk-1.7.0.0_alpha02.ebuild 5367
+SHA256 55d77e4ecb9f03562e7edfd07fcea47098f2f94a8ba184ab2ba840fed28949af sun-jdk-1.7.0.0_alpha02.ebuild 5367
+MISC ChangeLog 1042 RMD160 e9c9eebd12e433cd2a400b2e9bc4fd04bdda57a1 SHA1 7830662dfc72aa4e241b4007017e4ca51f3275c0 SHA256 db3bfe7a9f130c977bf88ef45c2df3c9e8d2259a7a201aef1521afb91b2c35a3
+MD5 fca233e13e512c1894bfd2d905b9d63c ChangeLog 1042
+RMD160 e9c9eebd12e433cd2a400b2e9bc4fd04bdda57a1 ChangeLog 1042
+SHA256 db3bfe7a9f130c977bf88ef45c2df3c9e8d2259a7a201aef1521afb91b2c35a3 ChangeLog 1042
 MD5 f360dcf8347cca9cd439012184e48454 files/digest-sun-jdk-1.6.0.0_rc104 641
 RMD160 9798524286d787807f99ef2b28170546f6f72b96 files/digest-sun-jdk-1.6.0.0_rc104 641
 SHA256 fb75e615f1c8c251f59edb254516d4e3b50d085fc9c42e02a4e8c0ae9da10dec files/digest-sun-jdk-1.6.0.0_rc104 641
-MD5 6997b2e263aae69cf60722acd88c610c files/digest-sun-jdk-1.7.0.0_alpha01 635
-RMD160 af1825e949d6a3e8978d3854c5151b26acff895d files/digest-sun-jdk-1.7.0.0_alpha01 635
-SHA256 690481a7af47b65475997fbbfea959d54be2aa4e60cb089f48516c32ea6fd0f1 files/digest-sun-jdk-1.7.0.0_alpha01 635
+MD5 01b82239d3fbc1cd7b75f1ec69bcf6e7 files/digest-sun-jdk-1.7.0.0_alpha02 635
+RMD160 a406df0d781e4c8556ac36183d8e292bd1ae2c11 files/digest-sun-jdk-1.7.0.0_alpha02 635
+SHA256 a55cd39462344e9304bb7f175c72fb0c17c656cc433723ed4a0f99c393342400 files/digest-sun-jdk-1.7.0.0_alpha02 635
