@@ -1,6 +1,0 @@
-MD5 bdaca955bbd8401ab0ef0de5f5d53bd0 jdk-6-rc-bin-b102-linux-amd64-11_oct_2006.bin 56820912
-RMD160 844775a83441dc2e210007120106fd97b92a4f2b jdk-6-rc-bin-b102-linux-amd64-11_oct_2006.bin 56820912
-SHA256 97aa393e1886f9c0e23a42ab72ae6760693d9e1b94592d69f37665dd21f04a21 jdk-6-rc-bin-b102-linux-amd64-11_oct_2006.bin 56820912
-MD5 b7e47ef49c47d808a6db2f22a1fb55c4 jdk-6-rc-bin-b102-linux-i586-11_oct_2006.bin 63183059
-RMD160 f0f9e3301046d7adc2e49871a76fdb45845f0429 jdk-6-rc-bin-b102-linux-i586-11_oct_2006.bin 63183059
-SHA256 c8b5dd0ca5216f5ff0f88587f89fd543b910c228166ed16e0586b19a0bc0a036 jdk-6-rc-bin-b102-linux-i586-11_oct_2006.bin 63183059
