@@ -1,6 +1,0 @@
-MD5 640cc37dcda3e7f17de4e0a2619691ca jdk-6-rc-bin-b103-linux-amd64-19_oct_2006.bin 56816086
-RMD160 504f01714733bf8230d94663c86a623adb06ffdb jdk-6-rc-bin-b103-linux-amd64-19_oct_2006.bin 56816086
-SHA256 00b90c002a5d85ce333d8958b3fdeff43d73f16e61813adb6377242c7d86eea4 jdk-6-rc-bin-b103-linux-amd64-19_oct_2006.bin 56816086
-MD5 ee136bbac2460250f935bdc2175a02e8 jdk-6-rc-bin-b103-linux-i586-19_oct_2006.bin 63180253
-RMD160 fcf21666b4edaff19b76609dcfb4cb7152f1c2da jdk-6-rc-bin-b103-linux-i586-19_oct_2006.bin 63180253
-SHA256 e399c88a446af05eb0193be7463c9da6845583984b770eb306a847e8932c7292 jdk-6-rc-bin-b103-linux-i586-19_oct_2006.bin 63180253
