@@ -1,6 +1,0 @@
-MD5 7a106b044c137e3fbe0d987509312a3f jdk-7-ea-bin-b01-linux-amd64-21_jul_2006.bin 54658299
-RMD160 ed4b340985612111352efaf85a61de7575c9ed15 jdk-7-ea-bin-b01-linux-amd64-21_jul_2006.bin 54658299
-SHA256 7d48514a4c5089d1c6d24e7b79d29c021444b3939de9aa3956f04eac07060edb jdk-7-ea-bin-b01-linux-amd64-21_jul_2006.bin 54658299
-MD5 2c79bc9e2de5a030c0d76e074a538e1a jdk-7-ea-bin-b01-linux-i586-21_jul_2006.bin 60975958
-RMD160 5f9c864d6551a222660b1bdc0f95ff3801abea0d jdk-7-ea-bin-b01-linux-i586-21_jul_2006.bin 60975958
-SHA256 66a83524e77f8a518065056fd577c08fa34d7b95713ed606249821ac836ec85f jdk-7-ea-bin-b01-linux-i586-21_jul_2006.bin 60975958
