@@ -1,0 +1,6 @@
+MD5 692f314c07a62d168db9308eb21a4d41 jdk-7-ea-bin-b02-linux-amd64-08_nov_2006.bin 56216291
+RMD160 d4b527c617469f7e3d731a8da742769a82a9bbdc jdk-7-ea-bin-b02-linux-amd64-08_nov_2006.bin 56216291
+SHA256 8debcf78ffbf5acbc46cec213798a21adc9927e9c978816eb985949524a0e735 jdk-7-ea-bin-b02-linux-amd64-08_nov_2006.bin 56216291
+MD5 039ab39118cff9b8686be78a4a3b341a jdk-7-ea-bin-b02-linux-i586-08_nov_2006.bin 62577382
+RMD160 b067db8c29e4d1dca4eeedca7e0bc6839e078cce jdk-7-ea-bin-b02-linux-i586-08_nov_2006.bin 62577382
+SHA256 50205b0fa9a1b7c10e225575472b28ba851024334c3887230287152c67700718 jdk-7-ea-bin-b02-linux-i586-08_nov_2006.bin 62577382
