@@ -7,15 +7,13 @@ inherit java-vm-2 eutils
 MY_PV=${PV/_beta*/}
 MY_PVL=${MY_PV%.*}_${MY_PV##*.}
 MY_PVA=${MY_PV//./_}
-BETA=${PV#*_beta}
-DATE="19_oct_2006"
+ALPHA=${PV#*_alpha}
+DATE="08_nov_2006"
 MY_RPV=${MY_PV%.*}
 
-
-BASE_URL="http://download.java.net/jdk6/binaries/"
-x86file="jdk-6-rc-bin-b${BETA}-linux-i586-${DATE}.bin"
-amd64file="jdk-6-rc-bin-b${BETA}-linux-amd64-${DATE}.bin"
-
+BASE_URL="http://download.java.net/jdk7/binaries/"
+x86file="jdk-7-ea-bin-b${ALPHA}-linux-i586-${DATE}.bin"
+amd64file="jdk-7-ea-bin-b${ALPHA}-linux-amd64-${DATE}.bin"
 
 if use x86; then
 	At=${x86file}
@@ -25,12 +23,12 @@ fi
 
 S="${WORKDIR}/jdk${MY_RPV}"
 DESCRIPTION="Sun's Java Development Kit"
-HOMEPAGE="https://mustang.dev.java.net"
+HOMEPAGE="https://jdk7.dev.java.net/"
 SRC_URI="x86? ( ${BASE_URL}/$x86file ) amd64? ( ${BASE_URL}/$amd64file )"
-SLOT="1.6"
-LICENSE="sun-prerelease-jdk6"
+SLOT="1.7"
+LICENSE="sun-prerelease-jdk7"
 KEYWORDS="~amd64 ~x86"
-RESTRICT="nostrip fetch"
+#RESTRICT="nostrip fetch"
 IUSE="doc nsplugin examples"
 
 DEPEND="
@@ -174,7 +172,7 @@ pkg_postinst() {
 
 	echo
 	einfo " Be careful: ${P}'s Java compiler uses"
-	einfo " '-source 1.6' as default. This means that some keywords "
+	einfo " '-source 1.7' as default. This means that some keywords "
 	einfo " such as 'enum' are not valid identifiers any more in that mode,"
 	einfo " which can cause incompatibility with certain sources."
 	einfo " Additionally, some API changes may cause some breakages."
