@@ -2,6 +2,11 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Nov 2006; Vlastimil Babka <caster@gentoo.org>
+  -sun-jdk-1.6.0.0_beta102.ebuild, -sun-jdk-1.6.0.0_beta103.ebuild,
+  -sun-jdk-1.7.0.0_alpha01.ebuild, +sun-jdk-1.7.0.0_alpha02.ebuild:
+  New 1.7 snapshot. Remove old 1.6 ebuilds.
+
   24 Oct 2006; Federico Fissore <federico@fsfe.org>
   +sun-jdk-1.6.0.0_beta103.ebuild:
   New snapshot bump.
